# mini-pgw

./: CMakeLists.txt  README.md
config/: client_config.json  server_config.json
include/: config_loader.hpp
include/client/: bcd_encoder.hpp  logger_initializer.hpp  pgw_client.hpp
include/server/: cdr_writer.hpp  decode_utils.hpp  http_api.hpp  logger_initializer.hpp  pgw_server.hpp  signal_handler.hpp
src/: config_loader.cpp
src/client/: bcd_encoder.cpp  logger_initializer.cpp  main.cpp  pgw_client.cpp
src/server/: cdr_writer.cpp  decode_utils.cpp  http_api.cpp  logger_initializer.cpp  main.cpp  pgw_server.cpp  signal_handler.cpp
tests/: test_config_loader.cpp
tests/client/: test_bcd_encoder.cpp  test_logger_initializer_client.cpp  test_pgw_client.cpp
tests/server/: .gitignore  test_cdr_writer.cpp  test_decode_utils.cpp  test_http_api.cpp  test_logger_initializer_server.cpp  test_pgw_server.cpp  test_signal_handler.cpp
